ex6/testdata/typechecker/error/ExtendsTest-err.java
class ExtendsTest {
	public static void main(String[] a){
    }
}

class A extends A {} // TE